# sqlplus

./: .gitignore  README.md  pyproject.toml
examples/: demo.sqlp
sqlp/: __init__.py  ast.py  cli.py  compiler.py  executor.py  grammar.lark  parser.py
sqlp/app/: app.py
tests/: test_basic.py
